Solved input overflow display. Made minor style changes

--- a/Kalc/styles.css
+++ b/Kalc/styles.css
@@ -7,18 +7,21 @@ body {
     border-radius: 5px;
     border: solid 1px black;
     margin: 10em auto;
-    width: 945px;
+    width: 600px;
+}
+
+#current_result {
+    font-size: 35px;
 }
 
 #full_display {
     background: #E6ECF3;
-    font-size: 70px;
+    font-size: 50px;
     display: flow-root;
     margin: 15px 15px 15px 15px;
     border-radius: 5px;
     color: black;
     font-family: Monaco, serif;
-    text-overflow: ellipsis;
 }
 
 .input_display_inactive {
@@ -31,26 +34,30 @@ body {
 
 #right_display{
     text-align: right;
-    margin-left: 70px;
+    margin-left: 30px;
     margin-right: 20px;
     float: right;
-    display: inline;
+    display: inline-block;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    width: calc(80%);
+    white-space: nowrap;
 }
 
 #current_result {
 }
 
 #current_operator {
-    width: 50px;
+    width: 28px;
     float: left;
-    font-size: 50px;
-    margin-top: 70px;
+    font-size: 40px;
+    margin-top: 60px;
     padding-left: 10px;
     margin-left: 10px;
 }
 
 #key_grid {
-    width: 930px;
+    width: 585px;
     height: 100%;
     background: transparent;
     margin-left: 10px;
@@ -68,7 +75,7 @@ table {
 td {
     border:  solid transparent 5px;
     outline: none;
-    width: 220px;
+    width: 130px;
     height: 100%;
 }
 
@@ -82,7 +89,7 @@ button {
     width: 100%;
     height: 100%;
     border: none;
-    font-size: 40px;
+    font-size: 30px;
     outline: none;
     font-family: Roboto Slab, serif;
     color: black;
